# contextgate

./: .gitignore  LICENSE  README.md  pyproject.toml
contextgate/: __init__.py  assembler.py  cli.py  content_validation.py  gate.py  parser.py  schemas.py  update_channel.py
demo/: basic_flow.py
docs/: CONTEXTGATE_LAUNCH_BRIEF.md  CONTEXTGATE_LAUNCH_COPY.md  CONTEXTGATE_PROTOCOL_PROPOSAL.md  TRUST_SCOPED_CONTEXT_HEADERS_PROTOCOL_PROPOSAL.md
examples/: anthropic_messages_wrapper.json  cli_agent_loop.sh  cli_anthropic_messages_wrapper_pipeline.sh  cli_apply_update_flow.py  cli_combined_diagnostics.sh  cli_event_array_pipeline.sh  cli_event_log_pipeline.sh  cli_exit_code_branching.sh  cli_gemini_generate_content_pipeline.sh  cli_hud_diff.sh  cli_openai_chat_wrapper_pipeline.sh  cli_provider_wrapper_pipeline.sh  cli_reject_loop.sh  cli_shell_lib_demo.sh  cli_stderr_all_pipeline.sh  cli_transcript_diff.sh  contextgate_shell_lib.sh  end_to_end_prompt_assembly.py  event_log_array_shape.json  event_log_shape.json  gemini_generate_content_wrapper.json  headerforge_desktop_from_files.py  multi_gate_custom_tags.py  openai_chat_completions_wrapper.json  provider_wrapper_event.json  rejected_malicious_update.py  stderr_json_record.schema.json  trusted_hud_from_os.py  update_lifecycle.py  update_payloads.py  update_reject_mode.py
tests/: test_assembler.py  test_cli.py  test_examples.py  test_gate.py  test_parser.py  test_update_channel.py
