[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contextgate"
version = "0.1.0"
description = "Prompt-context boundary primitives for agent systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "APIS-AI" }]

[tool.setuptools]
packages = ["contextgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
